fix(frontend): Fix register form errors
Imported store and extracted minPasswordLength from Redux, to interpolate into conditional that displays 'password too short' error.

--- a/client/src/accounts/forms.module.css
+++ b/client/src/accounts/forms.module.css
@@ -59,6 +59,7 @@
 
 .errorMessage {
   color: red;
+  padding: 0 1.5rem;
 }
 
 .buttons {
@@ -69,4 +70,8 @@
 .button {
   margin: 1rem;
   padding: 0.5rem;
+}
+
+.passwordStrengthMeter {
+  padding: 0 0.5rem;
 }
